--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import 'primeng/resources/themes/bootstrap4-light-blue/theme.css';
+
+@import 'primeflex/primeflex.scss';
+@import 'primeicons/primeicons.css';
